--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -7,6 +7,6 @@ permissions:
 jobs:
   welcome:
     name: Post welcome comment
-    runs-on: ubutnu-latest
+    runs-on: ubuntu-latest
       
       
