--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,4 +1,4 @@
-name: post welcome event
+ name: post welcome event
 on:
   pull_request:
     types: [opened]
@@ -8,5 +8,11 @@ jobs:
   welcome:
     name: Post welcome comment
     runs-on: ubuntu-latest
+    steps:
+      - run: gh per comment "$PR_URL" --body "Welcome to the repository!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: $ {{ github.event.pull_request.html_url }}
+      
       
       
